@@ -11,6 +11,7 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 
@@ -39,7 +40,7 @@ public class ReservationServiceImplementation implements ReservationService {
                 .findAll().stream()
                 .filter(reservation -> reservation.getCompany().getAddress().getCity().equals(city_name))
                 .map(reservationMapper::scheduleToScheduleDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
 
@@ -50,17 +51,18 @@ public class ReservationServiceImplementation implements ReservationService {
                 .findAll().stream()
                 .filter(reservation -> reservation.getCompany().getName().equals(company_name))
                 .map(reservationMapper::scheduleToScheduleDto)
-                .toList();
+                .collect(Collectors.toList());
 
     }
 
     @Override
     public List<ReservationDto> findByDate(LocalDate start_date, LocalDate end_date) {
         return reservationRepository.findAll().stream()
-                .filter(reservation -> ( (reservation.getStarting_date().isAfter(start_date) || reservation.getStarting_date().isEqual(start_date))
-                || (reservation.getEnding_date().isEqual(end_date) || reservation.getEnding_date().isBefore(end_date))))
+                .filter(reservation -> ( (start_date.isAfter(reservation.getStarting_date()) ||
+                        start_date.isEqual(reservation.getStarting_date()))
+                && (end_date.isEqual(reservation.getEnding_date()) || (end_date).isBefore(reservation.getEnding_date()))))
                 .map(reservationMapper::scheduleToScheduleDto)
-                .toList();
+                .collect(Collectors.toList());
 
     }
 }
